turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:20: error: identifier expected but ']' found.
var rule:Array[Array[Array[Int]]] = T[U[V[]]
                                          ^Turmite:106: error: ']' expected but '}' found.
}
^